Revision history for DBIx::Class

    * Fixes
        - Fix 0.08260 regression in DBD::SQLite bound int handling. Inserted
          data was not affected, but any function <=> integer comparison would
          have failed (originally fixed way back in 0e773352)
        - Fix failure to load DateTime formatter when connecting to Firebird
          over ODBC

0.08260 2014-01-28 18:52 (UTC)
    * New Features
        - A new zero-to-DBIC style manual: DBIx::Class::Manual::QuickStart

    * Notable Changes and Deprecations
        - Explicitly deprecate combination of distinct and selecting a
          non-column via $rs->get_column()

    * Fixes
        - More robust handling of circular relationship declarations by loading
          foreign classes less frequently (should resolve issues like
          http://lists.scsys.co.uk/pipermail/dbix-class/2013-June/011374.html)
          Note that none of this is a manifestations of a DBIC bug, but rather
          unexpected (but correct) behavior of load-order-dependent (hence
          logically broken) Resultclass hierarchies. In order to deal with this
          DBIC is scaling back a large number of sanity checks, which are to be
          reintroduce pending a better framework for source registration
        - Fix multiple edge cases of complex prefetch combining incorrectly
          with correlated subquery selections
        - Fix multiple edge cases stemming from interaction of a non-selecting
          order_by specification and distinct and/or complex prefetch
        - Fix unbound growth of a resultset during repeated execute/exhaust
          cycles (GH#29)
        - Work around (and be very vocal about the fact) when DBIC encounters
          an exception object with broken string overloading
        - Clarify ambiguous behavior of distinct when used with ResultSetColumn
          i.e. $rs->search({}, { distinct => 1 })->get_column (...)